fix spacing with extra ntoes

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ code {
 .note {
   height: 15rem;
   width: auto;
+  max-width: 50px;
 }
 
 /* .btn:active{
